Moving json object to different file

--- a/movie_details.html
+++ b/movie_details.html
@@ -31,6 +31,11 @@
     </main>
  
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+ 
+
+  <script type="text/javascript"
+  src="movie_data.js">
+</script>
   <script src="movies.js"></script>
 </body>
 </html>
