--- a/index.html
+++ b/index.html
@@ -118,8 +118,13 @@
         <p>&copy; 2023 Movie Booking System</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="movies.js"></script>
+   
+  <script type="text/javascript"
+  src="movie_data.js">
+</script>
     <script src="carousel.js"></script>
+
+   
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
