--- a/movie_details.html
+++ b/movie_details.html
@@ -7,7 +7,21 @@
   <link rel="stylesheet" href="movie.css" />
 </head>
 <body>
-
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <img src="logo.jpeg" alt="logo" style="height: 80px;">
+        <a href="#">Big Screen Buddies</a>
+      </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="index.html">Content</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Login/Registration</a></li>
+      </ul>
+    </div>
+  </nav>
     <main>
         <div class="heading">
           <div>
@@ -29,7 +43,7 @@
    <hr>
         <div id="movieDetails"></div>
     </main>
- 
+   
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
  
 
