payment and logout changes

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="movie_details.html">About</a></li>
         <li><a href="index.html">Content</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">Login/Registration</a></li>
+        <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
   </nav>
