--- a/payment.html
+++ b/payment.html
@@ -195,7 +195,7 @@
           contentDiv.id = contentId;
           contentDiv.classList.add("accordion-content");
 
-          contentDiv.innerHTML += "<p>Email: example@example.com</p>";
+          contentDiv.innerHTML += "<p>Email: screenbuddies@gmail.com</p>";
           contentDiv.innerHTML += "<p>Mobile Number: +1 123-456-7890</p>";
 
           contentDiv.appendChild(
