--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="right-section form">
         <div class="title">
-          <span class="first-title">Title</span>
+          <span class="first-title">Big Screen Buddies</span>
           <span class="describe">Login</span>
         </div>
         <form action="" id="login_form" method="post">
