--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
   <nav>
     <div class="menu">
       <div class="logo">
-        <img src="logo.jpeg" alt="logo" style="height: 80px;">
+        <img src="assets/camera-movie.png" alt="logo">
         <a href="#">Big Screen Buddies</a>
       </div>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="movie_details.html">About</a></li>
-        <li><a href="index.html">Content</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="login.html">Login</a></li>
         <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
@@ -122,7 +121,9 @@
   <script type="text/javascript"
   src="movie_data.js">
 </script>
+
     <script src="carousel.js"></script>
+   
 
    
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
