--- a/movie_details.html
+++ b/movie_details.html
@@ -10,15 +10,15 @@
   <nav>
     <div class="menu">
       <div class="logo">
-        <img src="logo.jpeg" alt="logo" style="height: 80px;">
+        <img src="assets/camera-movie.png" alt="logo">
         <a href="#">Big Screen Buddies</a>
       </div>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="movie_details.html">About</a></li>
         <li><a href="index.html">Content</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Login/Registration</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
   </nav>
