--- a/payment.html
+++ b/payment.html
@@ -48,7 +48,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+       
         flex-grow: 1;
         padding: 20px;
         background: black;
@@ -387,12 +387,14 @@
 
           $("#qrCodeModal").modal("show");
           $("#redirectButton").on("click", function (){
-            clearLocalStorageExceptOne("userInfo");
-        function clearLocalStorageExceptOne(keepKey) {
+            clearLocalStorageExceptOne("userInfo","isLoggedIn");
+        function clearLocalStorageExceptOne(keepKey,login) {
             for (var key in localStorage) {
-              if (localStorage.hasOwnProperty(key) && key !== keepKey) {
+              if (localStorage.hasOwnProperty(key) && key !==keepKey ) {
                 localStorage.removeItem(key);
+               
               }
+              localStorage.setItem("isLoggedIn",true);
             }
           }
               window.location.href = "index.html";
@@ -405,7 +407,25 @@
             $(this).remove();
           });
         };
+        $("#logout").click(()=>{
+  let path = window.location.pathname;
+  let page = path.split("/").pop();
+if(page=="seat_selection.html"|| page=="payment.html"){
+  window.location.href = "index.html";
+}
+else{
+  clearLocalStorageExceptOne("userInfo");
+  function clearLocalStorageExceptOne(keepKey) {
+      for (var key in localStorage) {
+        if (localStorage.hasOwnProperty(key) && key !== keepKey) {
+          localStorage.removeItem(key);
+        }
+      }
+    }
+}
+ 
 
+})
         $(document).ready(() => {
           createAccordion();
         });
