--- a/seat_selection.html
+++ b/seat_selection.html
@@ -55,7 +55,13 @@
 </div>
     <button class="showtime_button payment" id="buy">BUY TICKETS</button>
   </div>
-
+  <div id="overlay">
+    <div class="overlay-content">
+      <span class="close-overlay">&times;</span>
+      <img src="assets/chair-office.png" class="seatAlert" />
+      <p class="overlay-text">Please Select Atleast One Seat</p>
+    </div>
+  </div>
 </main>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
