--- a/seat_selection.html
+++ b/seat_selection.html
@@ -16,9 +16,8 @@
         <a href="#">Big Screen Buddies</a>
       </div>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="movie_details.html">About</a></li>
-        <li><a href="index.html">Content</a></li>
+        <li><a href="index.html">Home</a></li>
+     
         <li><a href="login.html">Login</a></li>
         <li><a href="#" id="logout">Logout</a></li>
       </ul>
@@ -63,7 +62,30 @@
     </div>
   </div>
 </main>
+<footer class="footer">
+  <ul class="social-icon">
+    <li class="social-icon__item"><a class="social-icon__link" href="#">
+        <ion-icon name="logo-facebook"></ion-icon>
+      </a></li>
+    <li class="social-icon__item"><a class="social-icon__link" href="#">
+        <ion-icon name="logo-twitter"></ion-icon>
+      </a></li>
+    <li class="social-icon__item"><a class="social-icon__link" href="#">
+        <ion-icon name="logo-linkedin"></ion-icon>
+      </a></li>
+    <li class="social-icon__item"><a class="social-icon__link" href="#">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </a></li>
+  </ul>
+  <ul class="menu">
+    <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+    <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+    <li class="menu__item"><a class="menu__link" href="#">Login</a></li>
+    <li class="menu__item"><a class="menu__link" href="#">Logout</a></li>
 
+  </ul>
+    <p>&copy; 2023 Movie Booking System</p>
+</footer>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   
   <script type="text/javascript"
