--- a/payment.html
+++ b/payment.html
@@ -356,7 +356,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title">Download Tickets</h5>
+                                    <h5 class="modal-title">Payment Successful</h5>
                                  
                                 </div>
                                 <div class="modal-body" id="qrCodeContainer">
@@ -402,6 +402,7 @@
           $("#paymentValue").text("Cost:" + Cost);
           $("#seat-number").text("Seat-Number:" + seatNumber);         
           $("#showTime").text("Show Time:" + showTime);
+          
           $("#qrCodeModal").on("hidden.bs.modal", function () {
             $(this).remove();
           });
