--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
           </div>
           <div class="input-wrapper">
             <input
-              type="text"
+              type="number"
               id="phoneNumber"
               name="phone_number"
               placeholder=" "
