--- a/seat_selection.html
+++ b/seat_selection.html
@@ -12,7 +12,7 @@
   <nav>
     <div class="menu">
       <div class="logo">
-        <img src="assets/camera-movie.png" alt="logo">
+        <img src="assets/logo.jpg" alt="logo" style="width:5%">
         <a href="#">Big Screen Buddies</a>
       </div>
       <ul>
