--- a/payment.html
+++ b/payment.html
@@ -112,7 +112,7 @@
     <nav>
       <div class="menu">
         <div class="logo">
-          <img src="assets/camera-movie.png" alt="logo">
+          <img src="assets/logo.jpg" alt="logo" style="width:5%">
           <a href="#">Big Screen Buddies</a>
         </div>
         <ul>
@@ -123,7 +123,6 @@
         </ul>
       </div>
     </nav>
-
     <main>
       <h2 class="payment-options-heading">Choose a Payment Option</h2>
       <div id="paymentContainer"></div>
