--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
      
-        <li><a href="login.html">Login</a></li>
-        <li><a href="#" id="logout">Logout</a></li>
+        <li><a href="login.html" class="login">Login</a></li>
+        <li><a href="#" id="logout" class="login">Logout</a></li>
       </ul>
     </div>
   </nav>
@@ -90,9 +90,9 @@
           </a></li>
       </ul>
       <ul class="menu">
-        <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+        <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
         <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-        <li class="menu__item"><a class="menu__link" href="#">Login</a></li>
+        <li class="menu__item"><a class="menu__link" href="login.html">Login</a></li>
         <li class="menu__item"><a class="menu__link" href="#">Logout</a></li>
   
       </ul>
