--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
               type="number"
               id="phoneNumber"
               name="phone_number"
-              placeholder=" "
+              placeholder="123-456-7890 "
             />
             <label for="phoneNumber">Phone Number</label>
             <div class="error"></div>
