--- a/seat_selection.html
+++ b/seat_selection.html
@@ -78,9 +78,9 @@
       </a></li>
   </ul>
   <ul class="menu">
-    <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+    <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
     <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-    <li class="menu__item"><a class="menu__link" href="#">Login</a></li>
+    <li class="menu__item"><a class="menu__link" href="login.html">Login</a></li>
     <li class="menu__item"><a class="menu__link" href="#">Logout</a></li>
 
   </ul>
